--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"dependencies": {
+		"antd": "^4.9.1",
 		"axios": "^0.19.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
